coffreo/kubernetes/1.0/.container/deploy/recette/ingress.yaml
##########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ${APP_NAME}-ingress
    labels:
        app: ${APP_NAME}
    annotations:
        ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
    rules:
        -   host: ${APP_NAME}.k8s.coffreo.internal
            http:
                paths:
                    -   backend:
                            serviceName: ${APP_NAME}-service
                            servicePort: 80
